1st major update for formatting, about 70% done working on both mobile & desktop.

--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow" style="height: 75px;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white navbar-styles" style="height: 75px; position:fixed; width:100%; ">
             <div class="container-fluid">
                 <div class="d-flex">
                     <img src="/Assets/images/SVGs/SC.svg" style="height: 35px; padding: 0px;">
