--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -3,27 +3,292 @@
 }
 
 <!-- Primary area that I will be writing my HTML -->
-<div class="full-screen-div" style="background-color: lightblue; min-height: 100vh;">
+<div class="full-screen-div" style="background-color: lightblue; min-height: 100vh; padding-top: 75px;">
     <div class="text-center">
         <h1 class="display-4">Home screen here</h1>
     </div>
 </div>
 
-<div style="background-color: indianred; min-height: 100vh;">
-    <div class="container d-flex justify-content-center align-items-center" style="background-color: lightcyan; width: 70%; min-height: 100vh;">
-        <h1 class="display-4">Knowledge here</h1>
+<section style="background-color: indianred; ">
+
+    <div class="container section-width align-items-center text-lg-left" style="background-color: lightcyan;">
+        <h3 class="section-headers">Knowledge</h3>
     </div>
+
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan; ">
+
+        <div class="row" style="column-gap: 10px; row-gap: 10px">
+
+            <div class="container-lg knowledge-box col" style="background-color: green; ">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                    </div>
+                    <div class="col-lg-12">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas. 
+                            Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem. 
+                        </p>
+                    </div>
+                    <div class="col-lg-12 skills-square">
+                        <div class="row justify-content-center" style="padding: 5px">
+                            <div class="col-md-3"> <!-- make these adjust with media queries, becomes x if phone screen size, becomes y if desktop size. -->
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-md-3">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-md-3">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-md-3">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-md-3">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-lg knowledge-box col" style="background-color: lightgray;">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <img src="/Assets/images/SVGs/servers-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                    </div>
+                    <div class="col-lg-12">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
+                            Nam at vehicula leo, ut gravida massa. 
+                        </p>
+                    </div>
+
+                    <div class="col-lg-12 skills-square">
+                        <div class="row">
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container-lg knowledge-box col" style="background-color: yellow;">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                    </div>
+                    <div class="col-lg-12">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
+                            Nam at vehicula leo, ut gravida massa. 
+                        </p>
+                    </div>
+
+                    <div class="col-lg-12 skills-square">
+                        <div class="row">
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                            <div class="col-4">
+                                <img src="/Assets/images/SVGs/java.svg" class="img-fluid skills-square-icons" alt="Responsive Image" />
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<div style="width: 100%; background-color: lightgreen;">
+
+    <div class="container section-width align-items-center text-lg-left" style="background-color: lightyellow;">
+        <h3 class="section-headers">Projects</h3>
+    </div>
+
+    <div class="container section-width" style="background-color: lightyellow;">
+
+    <div class="row" style="margin-bottom: 20px;">
+        <!-- First Row - Image then Text -->
+        <div class="col-md-6">
+            <div class="project-row">
+                <div class="project-image-size">
+                    <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project-row project-text-section-size" style="background-color: indianred;">
+                <div class="project-titles">
+                    <h1 class="h1 project-titles">Project Title</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
+                </div>
+                <h1 class="h2 project-titles">Technology</h1>
+            </div>
+        </div>
+    </div>
+
+        <div class="row" style="margin-bottom: 20px;">
+        <!-- Second Row - Text then Image -->
+        <div class="col-md-6">
+            <div class="project-row project-text-section-size" style="background-color: indianred;">
+                <div class="project-titles">
+                    <h1 class="h1 project-titles">Project Title</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
+                </div>
+                <h1 class="h2 project-titles">Technology</h1>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project-row">
+                <div class="project-image-size">
+                    <img class="img-fluid" src="/Assets/images/Placeholders/pepe.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
+        <div class="row" style="margin-bottom: 20px;">
+            <!-- First Row - Image then Text -->
+            <div class="col-md-6">
+                <div class="project-row">
+                    <div class="project-image-size">
+                        <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="project-row project-text-section-size" style="background-color: indianred;">
+                    <div class="project-titles">
+                        <h1 class="h1 project-titles">Project Title</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        </p>
+                    </div>
+                    <h1 class="h2 project-titles">Technology</h1>
+                </div>
+            </div>
+        </div>
+
 </div>
 
 
-<div style="width: 100%; background-color: lightgreen; min-height: 200vh;">
-    <div class="text-center">
-        <h1 class="display-4">Projects go here</h1>
+
+
+
+
+
+</div>
+
+<div style="width: 100%; background-color: indianred;">
+
+    <div class="container section-width align-items-center text-lg-left" style="background-color: lightcyan;">
+        <h3 class="section-headers">About Me</h3>
+    </div>
+
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan;">
+
+        <div class="row">
+
+            <div class="col-md-6">
+                <p>
+                    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
+                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, 
+                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam 
+                    aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi 
+                    consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat 
+                    quo voluptas nulla pariatur?"
+
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+            </div>
+
+            <div class="col-md-6" style="background-color: lightgray; min-height: 300px; max-width: 500px">
+
+            </div>
+
+        </div>
+
     </div>
 </div>
 
-<div style="width: 100%; background-color: lightyellow; min-height: 100vh;">
-    <div class="text-center">
-        <h1 class="display-4">Contact me here</h1>
+<div style="width: 100%; background-color: lightgreen;">
+
+    <div class="container section-width align-items-center text-lg-left" style="background-color: lightyellow;">
+        <h3 class="section-headers">Contact</h3>
+    </div>
+
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightyellow;">
+
+        <div class="row">
+
+            <div class="col-md-6">
+                <p>
+                    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+                    aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+                    consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat
+                    quo voluptas nulla pariatur?"
+
+                </p>
+            </div>
+
+            <div class="col-md-6" style="background-color: lightgray; min-height: 300px; max-width: 500px">
+            </div>
+
+        </div>
+
     </div>
 </div>
