--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -16,3 +16,59 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/* Layout Formatting*/
+
+.navbar-styles {
+    box-shadow: 0px 5px 15px 10px rgba(0,0,0,0.1);
+}
+
+/* Site Formatting */
+
+.section-width {
+    max-width: 85%;
+    min-width: 250px;
+    padding: 20px
+
+}
+
+.section-headers {
+    padding: 10px;
+    font-size: 50px;
+    margin: 0px;
+}
+
+/* Knowledge Section */
+
+.knowledge-box {
+    max-width: 475px;
+    min-width: 250px;
+    
+}
+
+.skills-square {
+    padding: 10px;
+    background-color: white;
+}
+
+.skills-square-icons {
+    max-width: 60px
+}
+
+/* Project Section */
+
+.row-formatting {
+    margin-bottom: 20px;
+}
+
+.project-image-size {
+    max-width: 600px;
+}
+
+.project-text-section-size{
+    min-width: 300px;
+}
+
+.project-titles {
+    margin-bottom: 20px
+}
