--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -9,6 +9,8 @@
     </div>
 </div>
 
+<!-- Knowledge Section-->
+
 <section style="background-color: indianred; ">
 
     <div class="container section-width align-items-center text-lg-left" style="background-color: lightcyan;">
@@ -133,6 +135,7 @@
     </div>
 </section>
 
+<!-- Projects Section-->
 
 <div style="width: 100%; background-color: lightgreen;">
 
@@ -141,91 +144,95 @@
     </div>
 
     <div class="container section-width" style="background-color: lightyellow;">
+    
+    <div class="container-fluid">
 
-    <div class="row" style="margin-bottom: 20px;">
-        <!-- First Row - Image then Text -->
-        <div class="col-md-6">
-            <div class="project-row">
-                <div class="project-image-size">
-                    <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
+       <div class="container-fluid">
+            <div class="row row-formatting" style="margin-bottom: 160px;">
+                <!-- First Row - Image then Text -->
+                <div class="col-md-6">
+                        <div class="project-image-size">
+                            <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
+                        </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="project-row project-text-section-size" style="background-color: indianred;">
-                <div class="project-titles">
-                    <h1 class="h1 project-titles">Project Title</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    </p>
-                </div>
-                <h1 class="h2 project-titles">Technology</h1>
-            </div>
-        </div>
-    </div>
 
-        <div class="row" style="margin-bottom: 20px;">
-        <!-- Second Row - Text then Image -->
-        <div class="col-md-6">
-            <div class="project-row project-text-section-size" style="background-color: indianred;">
-                <div class="project-titles">
-                    <h1 class="h1 project-titles">Project Title</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    </p>
-                </div>
-                <h1 class="h2 project-titles">Technology</h1>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="project-row">
-                <div class="project-image-size">
-                    <img class="img-fluid" src="/Assets/images/Placeholders/pepe.jpg">
-                </div>
-            </div>
-        </div>
-    </div>
+                <div class="col-md-6 ">
+                    <div class=" project-text-section-size" style="background-color: indianred; ">
+                        <div class="project-titles">
+                            <h1 class="h1 project-titles">Project Title</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </p>
+                        </div>
+                        <h1 class="h2 project-titles">Technology</h1>
 
-        <div class="row" style="margin-bottom: 20px;">
-            <!-- First Row - Image then Text -->
-            <div class="col-md-6">
-                <div class="project-row">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+       </div>
+
+       <div class="container-fluid">
+            <div class="row row-formatting" style="margin-bottom: 160px;">
+                <!-- First Row - Image then Text -->
+                <div class="col-md-6">
+                    <div class=" project-text-section-size" style="background-color: indianred;">
+                        <div class="project-titles">
+                            <h1 class="h1 project-titles">Project Title</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </p>
+                        </div>
+                        <h1 class="h2 project-titles">Technology</h1>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
                     <div class="project-image-size">
                         <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="project-row project-text-section-size" style="background-color: indianred;">
-                    <div class="project-titles">
-                        <h1 class="h1 project-titles">Project Title</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                        </p>
+       </div>
+
+       <div class="container-fluid">
+            <div class="row row-formatting" style="margin-bottom: 80px;">
+                <!-- First Row - Image then Text -->
+                <div class="col-md-6">
+                    <div class="project-image-size">
+                        <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
                     </div>
-                    <h1 class="h2 project-titles">Technology</h1>
+                </div>
+                <div class="col-md-6">
+                    <div class=" project-text-section-size" style="background-color: indianred;">
+                        <div class="project-titles">
+                            <h1 class="h1 project-titles">Project Title</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </p>
+                        </div>
+                        <h1 class="h2 project-titles">Technology</h1>
+                    </div>
                 </div>
             </div>
-        </div>
+        
+       </div>
 
+
+    </div>
+    </div>
 </div>
 
-
-
-
-
-
-
-</div>
+<!-- About Me Section-->
 
 <div style="width: 100%; background-color: indianred;">
 
@@ -261,6 +268,8 @@
 
     </div>
 </div>
+
+<!-- Contact Section -->
 
 <div style="width: 100%; background-color: lightgreen;">
 
