working formatting in mobile & web view

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="col-md-6 ">
-                    <div class=" project-text-section-size" style="background-color: indianred; ">
+                    <div class=" project-text-section-size" style="background-color: indianred; margin-left: auto">
                         <div class="project-titles">
                             <h1 class="h1 project-titles">Project Title</h1>
                             <p>
@@ -194,7 +194,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="project-image-size">
+                    <div class="project-image-size" style="margin-left: auto">
                         <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class=" project-text-section-size" style="background-color: indianred;">
+                    <div class=" project-text-section-size" style="background-color: indianred; margin-left: auto">
                         <div class="project-titles">
                             <h1 class="h1 project-titles">Project Title</h1>
                             <p>
