--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -232,6 +232,8 @@
     </div>
 </div>
 
+<!-- Test comment to see if its working-->
+
 <!-- About Me Section-->
 
 <div style="width: 100%; background-color: indianred;">
