--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -169,7 +169,20 @@
                         </div>
                         <h1 class="h2 project-titles">Technology</h1>
 
-                        <div></div>
+                            <div class="row">
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -178,7 +191,7 @@
        <div class="container-fluid">
             <div class="row row-formatting" style="margin-bottom: 160px;">
                 <!-- First Row - Image then Text -->
-                <div class="col-md-6">
+                <div class="col-md-6 order-2 order-md-1">
                     <div class=" project-text-section-size" style="background-color: indianred;">
                         <div class="project-titles">
                             <h1 class="h1 project-titles">Project Title</h1>
@@ -190,10 +203,24 @@
                             </p>
                         </div>
                         <h1 class="h2 project-titles">Technology</h1>
+                            <div class="row">
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                    <div class="col-md-6 order-1 order-md-2">
                     <div class="project-image-size" style="margin-left: auto">
                         <img class="img-fluid" src="/Assets/images/Placeholders/amogus.jpg">
                     </div>
@@ -221,6 +248,20 @@
                             </p>
                         </div>
                         <h1 class="h2 project-titles">Technology</h1>
+                            <div class="row">
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                                <div class="col-2 col-md-1_5">
+                                    <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -242,7 +283,7 @@
         <h3 class="section-headers">About Me</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan;">
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan; padding: 40px">
 
         <div class="row">
 
@@ -262,8 +303,8 @@
                 </p>
             </div>
 
-            <div class="col-md-6" style="background-color: lightgray; min-height: 300px; max-width: 500px">
-
+            <div class="col-md-6">
+                <div style="background-color: lightgray; min-height: 300px; max-width: 500px; margin-left: auto"></div>
             </div>
 
         </div>
@@ -279,7 +320,7 @@
         <h3 class="section-headers">Contact</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightyellow;">
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightyellow;  padding: 40px">
 
         <div class="row">
 
@@ -296,7 +337,8 @@
                 </p>
             </div>
 
-            <div class="col-md-6" style="background-color: lightgray; min-height: 300px; max-width: 500px">
+            <div class="col-md-6">
+                <div style="background-color: lightgray; min-height: 300px; max-width: 500px; margin-left: auto"></div>
             </div>
 
         </div>
