--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -285,9 +285,9 @@
 
     <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan; padding: 40px">
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 40px;">
 
-            <div class="col-md-6">
+            <div class="col-md-6" style="margin-bottom: 40px;">
                 <p>
                     "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
                     eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
@@ -303,9 +303,75 @@
                 </p>
             </div>
 
-            <div class="col-md-6">
-                <div style="background-color: lightgray; min-height: 300px; max-width: 500px; margin-left: auto"></div>
+            <div class="col-md-6" style="padding-right: 10px;">
+                <div class="row" style="background-color: indianred; min-height: 300px; max-width: 500px; margin-left: auto;">
+
+                    <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
+                        <div class="row">
+
+                            <div class="d-flex col-9" style="padding: 10px">
+                                <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                <div style="max-width: 220px;">
+                                    <p class="d-flex">Code Samples on Github</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex col-3">
+                                <div style="background-color: darkgray; padding: 10px;">
+                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
+                        <div class="row">
+
+                            <div class="d-flex col-6" style="padding: 10px">
+                                <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                <div style="max-width: 220px;">
+                                    <p class="d-flex">Code Samples on Github</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex col-3">
+                                <div style="background-color: darkgray; padding: 10px;">
+                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
+
+                            <div class="d-flex col-3">
+                                <div style="background-color: darkgray; padding: 10px;">
+                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
+                        <div class="row">
+
+                            <div class="d-flex col-9" style="padding: 10px">
+                                <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                <div style="max-width: 220px;">
+                                    <p class="d-flex">Code Samples on Github</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex col-3">
+                                <div style="background-color: darkgray; padding: 10px;">
+                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
 
         </div>
 
