--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -10,25 +10,24 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white navbar-styles" style="height: 75px; position:fixed; width:100%; ">
-            <div class="container-fluid">
+
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white navbar-styles">
+
+            <div class="d-flex navbar-logo-layout" >
+                <img src="/Assets/images/SVGs/SC.svg" style="height: 35px; padding: 0px;">
                 <div class="d-flex">
-                    <img src="/Assets/images/SVGs/SC.svg" style="height: 35px; padding: 0px;">
-                    <a class="d-flex font-weight-bold" style="font-size: 25px;" asp-area="" asp-controller="Home" asp-action="Index">Samuel Cole</a>
-                    <div class="d-flex font-weight-bold text-left" style="font-size: 25px;">Front-End Developer</div>
+                    <a class="font-weight-bold" style="font-size: 25px;" asp-area="" asp-controller="Home" asp-action="Index">Samuel Cole</a>
                 </div>
+                <div class="d-flex title-for-hiding" style="font-size: 25px;">Front-End Developer</div>
             </div>
-            <div class="container w-25 d-flex">
-                <div class="d-flex align-items-center" style="height: 37.5px;">
-                    <div class="d-flex justify-content-center">
-                        <img src="/Assets/images/icons8-github-500.svg" alt="GitHub" width="75" style="height: 35px; padding: 0px;">
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <img src="/Assets/images/icons8-linkedin-512.svg" alt="LinkedIn" width="75" style="height: 35px; padding: 0px;">
-                    </div>
-                </div>
+
+            <div class="navbar-logo-layout" >
+                <img src="/Assets/images/icons8-github-500.svg" alt="GitHub" width="75" style="height: 35px; padding: 0px;">
+                <img src="/Assets/images/icons8-linkedin-512.svg" alt="LinkedIn" width="75" style="height: 35px; padding: 0px;">
             </div>
+                   
         </nav>
+
     </header>
 
     <div style= " border: none;">
