--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -21,15 +21,44 @@ body {
 
 .navbar-styles {
     box-shadow: 0px 5px 15px 10px rgba(0,0,0,0.1);
+    min-height: 75px;
+    position: fixed;
+    width: 100%;
+}
+
+@media (max-width: 479px) {
+    .title-for-hiding {
+        display: none;
+        visibility: hidden
+    }
+}
+
+/* Your existing media queries for other elements */
+@media (min-width: 320px) {
+    .navbar-logo-layout {
+        min-width: 50%;
+    }
+
+    .navbar-icon-layout {
+        min-width: 50%;
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar-logo-layout {
+        min-width: 75%;
+    }
+
+    .navbar-icon-layout {
+        min-width: 25%;
+    }
 }
 
 /* Site Formatting */
-
 .section-width {
     max-width: 85%;
     min-width: 250px;
     padding: 10px
-
 }
 
 .section-headers {
