added email fields

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -408,7 +408,15 @@
             </div>
 
             <div class="col-md-6">
-                <div style="background-color: lightgray; min-height: 300px; max-width: 500px; margin-left: auto"></div>
+                <div style="background-color: lightgray; min-height: 300px; max-width: 500px; margin-left: auto">
+                    <form>
+                        <input name="Name"/>
+                        <input name="Email" />
+                        <textarea name="Query"></textarea>
+                        <input type="submit"/>
+                    </form>
+
+                </div>
             </div>
 
         </div>
