ui improvements & applying correct colours

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -13,11 +13,11 @@
 
 <section style="background-color: indianred; ">
 
-    <div class="container section-width align-items-center text-lg-left" style="background-color: lightcyan;">
-        <h3 class="section-headers">Knowledge</h3>
+    <div class="container section-width align-items-center text-lg-left" style="background-color: var(--blue);">
+        <h3 class="section-headers" style="color: white">Knowledge</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan;">
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue)">
         
             <div class="container ">
                 <div class="row justify-content-center gx-md-4">
@@ -140,8 +140,8 @@
 
 <div style="width: 100%; background-color: lightgreen;">
 
-    <div class="container section-width align-items-center text-lg-left" style="background-color: lightyellow;">
-        <h3 class="section-headers">Projects</h3>
+    <div class="container section-width align-items-center text-lg-left" style="background-color: white;">
+        <h3 class="section-headers" style="color: var(--blue)">Projects</h3>
     </div>
 
     <div class="container section-width" style="background-color: lightyellow;">
@@ -158,7 +158,7 @@
                     </div>
 
                     <div class="col-md-6 margin-remover">
-                        <div class="project-text-section-size" style="background-color: indianred; margin-left: auto">
+                        <div class="project-text-section-size" style="background-color: white; margin-left: auto">
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
                                 <p>
@@ -193,7 +193,7 @@
                 <div class="row row-formatting" >
                 
                     <div class="col-md-6 order-2 order-md-1 margin-remover">
-                        <div class=" project-text-section-size" style="background-color: indianred;">
+                        <div class=" project-text-section-size" style="background-color: white;">
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
                                 <p>
@@ -239,7 +239,7 @@
                     </div>
 
                     <div class="col-md-6 margin-remover">
-                        <div class=" project-text-section-size" style="background-color: indianred; margin-left: auto">
+                        <div class=" project-text-section-size" style="background-color: white; margin-left: auto">
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
                                 <p>
@@ -281,17 +281,17 @@
 
 <!-- About Me Section-->
 
-<div style="width: 100%; background-color: indianred;">
+<div style="width: 100%; background-color: red;">
 
-    <div class="container section-width align-items-center text-lg-left" style="background-color: lightcyan;">
+    <div class="container section-width align-items-center text-lg-left text-color" style="background-color: var(--blue)">
         <h3 class="section-headers">About Me</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightcyan; padding: 40px">
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding: 40px">
 
         <div class="row" style="margin-bottom: 40px;">
 
-            <div class="col-md-6" style="margin-bottom: 40px;">
+            <div class="col-md-6 text-color" style="margin-bottom: 40px;">
                 <p>
                     "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
                     eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
@@ -308,7 +308,7 @@
             </div>
 
             <div class="col-md-6" style="padding-right: 10px;">
-                <div class="row" style="background-color: indianred; min-height: 300px; max-width: 500px; margin-left: auto;">
+                <div class="row" style="background-color: red; min-height: 300px; max-width: 500px; margin-left: auto;">
 
                     <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
                         <div class="row">
@@ -386,37 +386,29 @@
 
 <div style="width: 100%; background-color: lightgreen;">
 
-    <div class="container section-width align-items-center text-lg-left" style="background-color: lightyellow;">
-        <h3 class="section-headers">Contact</h3>
+    <div class="container section-width align-items-center text-lg-left" style="background-color: white;">
+        <h3 class="section-headers" style="color: var(--blue)">Contact</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: lightyellow;  padding: 40px">
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: white;  padding: 40px">
 
         <div class="row">
 
-            <div class="col-md-6">
-                <p>
-                    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-                    aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                    consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat
-                    quo voluptas nulla pariatur?"
-
-                </p>
-            </div>
-
-            <div class="col-md-6">
-                <div style="background-color: lightgray; min-height: 300px; max-width: 500px; margin-left: auto">
+            <div class="col-md-6" style="max-width: 100%; background-color: red;">
+                <div style="background-color: lightgray; min-height: 300px; ">
                     <form method="post" asp-action="SendEmail" >
                         <input name="Name" placeholder="Name"/>
                         <input name="Email" placeholder="Email" />
                         <textarea name="Query"></textarea>
-                        <input type="submit" placeholder="Query" value="Send Email" />
+                        <input type="submit" placeholder="Query" value="Send Email"/>
                     </form>
-
                 </div>
+            </div>
+
+            <div class="col-md-6 " style="background-color: red; max-width: 100%;">
+              <div class="d-flex">
+                <img src="/Assets/images/SVGs/SC.svg" class="img-fluid" alt="Responsive Image" style="max-height: 300px;" />
+              </div>
             </div>
 
         </div>
