--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -16,9 +16,9 @@
             <div class="d-flex navbar-logo-layout" >
                 <img src="/Assets/images/SVGs/SC.svg" style="height: 35px; padding: 0px;">
                 <div class="d-flex">
-                    <a class="font-weight-bold" style="font-size: 25px;" asp-area="" asp-controller="Home" asp-action="Index">Samuel Cole</a>
+                    <a class="font-weight-bold" style="font-size: 25px; color: var(--blue)" asp-area="" asp-controller="Home" asp-action="Index">Samuel Cole</a>
                 </div>
-                <div class="d-flex title-for-hiding" style="font-size: 25px;">Front-End Developer</div>
+                <div class="d-flex title-for-hiding" style="font-size: 25px; color: var(--grey)">Front-End Developer</div>
             </div>
 
             <div class="navbar-logo-layout" >
