fixed more formatting issues

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -142,20 +142,20 @@
 
 <!-- Projects Section-->
 
-<div style="width: 100%; background-color: lightgreen;">
+<div style="width: 100%; background-color: white;">
 
     <div class="container section-width align-items-center text-lg-left" style="background-color: white;">
         <h3 class="section-headers" style="color: var(--blue)">Projects</h3>
     </div>
 
-    <div class="container section-width" style="background-color: lightyellow;">
+    <div class="container section-width" style="background-color: white;">
     
         <div class="container-fluid">
 
-            <div style="margin-bottom: 80px;">
+            <div class="project-block-formatting project-block-margins" style=" border-bottom: 2px solid var(--blue);">
                 <div class="row row-formatting">
 
-                    <div class="col-md-6 margin-remover">
+                    <div class="section col-md-6 margin-remover">
 
                         <div class="project-image-size top-image" id="project-images">
                             <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="top-image">
@@ -167,30 +167,30 @@
                         
                     </div>
 
-                    <div class="col-md-6 margin-remover">
+                    <div class="section col-md-6 margin-remover">
                         <div class="project-text-section-size" style="background-color: white; margin-left: auto">
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
-                                <p>
+                                <p class="project-text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                                 </p>
                             </div>
-                            <h1 class="h2 project-titles">Technology</h1>
+                            <h1 class="h1 technology-titles">Technology</h1>
 
                                 <div class="row">
-                                    <div class="col-3 col-md-1_5">
+                                    <div class="col-2 col-md-1_5">
                                         <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-3 col-md-1_5">
+                                    <div class="col-2 col-md-1_5">
                                         <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-3 col-md-1_5">
+                                    <div class="col-2 col-md-1_5">
                                         <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-3 col-md-1_5">
+                                    <div class="col-2 col-md-1_5">
                                         <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
                                 </div>
@@ -199,21 +199,21 @@
                 </div>
            </div>
 
-            <div style="margin-bottom: 80px;">
+            <div class="project-block-formatting project-block-margins" style="border-bottom: 2px solid var(--blue);">
                 <div class="row row-formatting" >
                 
-                    <div class="col-md-6 order-2 order-md-1 margin-remover">
+                    <div class="section col-md-6 order-2 order-md-1 margin-remover">
                         <div class=" project-text-section-size" style="background-color: white;">
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
-                                <p>
+                                <p class="project-text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                                 </p>
                             </div>
-                            <h1 class="h2 project-titles">Technology</h1>
+                            <h1 class="h1 technology-titles">Technology</h1>
                                 <div class="row">
                                     <div class="col-3 col-md-1_5">
                                         <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
@@ -231,24 +231,26 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 order-1 order-md-2 margin-remover">
+                    <div class="section col-md-6 order-1 order-md-2 margin-remover">
                         <div class="project-image-size" style="margin-left: auto">
-                            <div class="project-image-size" style="z-index: 2">
-                                <img class="img-fluid image-styles" src="/Assets/images/Placeholders/amogus.jpg">
+
+                            <div class="project-image-size top-image" id="project-images">
+                                <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="top-image">
                             </div>
 
-                            <div class="project-image-size" style="z-index: 1;">
-                                <img class="img-fluid image-styles" src="/Assets/images/Placeholders/pepe.jpg">
+                            <div class="project-image-size bottom-image" id="project-images">
+                                <img class="img-fluid image-styles rotate-bottom" src="/Assets/images/Placeholders/pepe.jpg" id="bottom-image">
                             </div>
+                        
                         </div>
                     </div>
                 </div>
            </div>
 
-            <div style="margin-bottom: 80px;">
+            <div class="project-block-formatting" >
                 <div class="row row-formatting">
 
-                    <div class="col-md-6 margin-remover">
+                    <div class="section col-md-6 margin-remover">
 
                         <div class="project-image-size top-image" id="project-images">
                             <img class="img-fluid image-styles rotate-top" src="/Assets/images/Placeholders/amogus.jpg" id="top-image">
@@ -260,18 +262,18 @@
 
                     </div>
 
-                    <div class="col-md-6 margin-remover">
+                    <div class="section col-md-6 margin-remover">
                         <div class=" project-text-section-size" style="background-color: white; margin-left: auto">
                             <div class="project-titles">
                                 <h1 class="h1 project-titles">Project Title</h1>
-                                <p>
+                                <p class="project-text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                                 </p>
                             </div>
-                            <h1 class="h2 project-titles">Technology</h1>
+                            <h1 class="h1 technology-titles">Technology</h1>
                                 <div class="row">
                                     <div class="col-3 col-md-1_5">
                                         <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
